--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,21 @@
 input {
   margin: 1rem;
 }
+
+.card-container {
+  margin-top: 3rem;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 2rem;
+}
+
+h3 {
+  margin: 0 0 1rem 0;
+}
+.card {
+  color: teal;
+  background: white;
+  border: 5px solid teal;
+  border-radius: 10px;
+  padding: 1rem;
+}
